@@ -59,7 +59,7 @@ Dist::Zilla::Plugin::Prereqs = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.142180
 Dist::Zilla::Plugin::InstallGuide = 1.200005
 Dist::Zilla::Plugin::CheckSelfDependency = 0
-Dist::Zilla::Plugin::Run::AfterBuild = 0.038
+Dist::Zilla::Plugin::Run::AfterBuild = 0.041
 Dist::Zilla::Plugin::RunExtraTests = 0.024
 Dist::Zilla::Plugin::CheckStrictVersion = 0
 Dist::Zilla::Plugin::Git::Check = 0
