@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - avoid fatal errors on MSWin32 or any system where symlink support
+            is not available (see github #5)
 
 0.119     2016-09-04 22:48:25Z
           - Module::Metadata is no longer used as a test prereq (via
